# roura-agent

./: .env.stripe.example  .gitignore  CHANGELOG.md  Dockerfile.webhook  README.md  RELEASE_NOTES_v5.0.0.md  ROADMAP-v2.md  ROADMAP.md  SECURITY.md  pyproject.toml  railway.json  render.yaml
.github/workflows/: ci.yml  publish.yml  release-macos.yml  release.yml
.roura/: memory.json
.roura/sessions/: 397d6896-e919-4a98-8214-37df61feabf8.json  76cd6938-c8d4-401d-8ee4-0445d32fe9eb.json
desktop/: package.json
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/src/: backend.rs  commands.rs  main.rs  screenshot.rs
docs/: ARCHITECTURE.md  TROUBLESHOOTING.md
docs/api/: config.md  image.md  index.md  mcp.md  metrics.md  retry.md  tools-base.md
docs/tutorials/: getting-started.md  git-workflow.md  jira-integration.md
homebrew/: roura-agent.rb
packaging/: launcher.sh  main.py  roura-agent.spec
roura_agent/: branding.py  cli.py  config.py  constants.py  execution_loop.py  intent.py  llm.py  ollama.py  onboarding.py  prompt.py  repo_index.py  repo_tools.py  review_v2.py  stream.py  update.py
roura_agent/agent/: __init__.py  context.py  loop.py  planner.py
roura_agent/agents/: __init__.py  prompts.py  specialized.py
roura_agent/llm/: anthropic.py  base.py  ollama.py
roura_agent/memory/: __init__.py  persistent.py
roura_agent/pro/: ci.py
roura_agent/tools/: __init__.py  base.py  doctor.py  fs.py  git.py  github.py  jira.py  memory.py  project.py  review.py  shell.py  testing.py  webfetch.py
roura_agent/tui/: app.py
roura_agent/ui/: __init__.py  progress.py
scripts/: README.md  build-macos.sh  create-dmg.sh  generate_licenses.py  package-tarball.sh  payment_webhook.py  release.sh  scan-secrets.sh  setup_stripe.py  sign-and-notarize.sh  uninstall.sh  webhook_server.py
tests/: conftest.py  test_agents_prompts.py  test_banner.py  test_cli.py  test_doctor.py  test_execution_loop.py  test_fs.py  test_git.py  test_intent.py  test_llm_providers.py  test_progress_ui.py  test_repo_index.py  test_repo_tools.py  test_review_v2.py
