[project]
name = "roura-agent"
version = "0.1.0"
description = "Local agent CLI driven by Ollama with git/fs/shell/jira tools"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1"
]

[project.scripts]
roura-agent = "roura_agent.cli:app"
