[package]
name = "roura-agent-desktop"
version = "3.0.0"
description = "Roura Agent Desktop Application"
authors = ["Roura.io"]
license = "MIT"
repository = "https://github.com/roura-io/roura-agent"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [
    "tray-icon",
    "image-png",
] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
base64 = "0.21"
image = "0.24"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
reqwest = { version = "0.11", features = ["json"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
